--- a/amazon.html
+++ b/amazon.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Amazon Project</title>
-
+ <!-- This is just a starting of a big amazon project. -->
     <!-- This code is needed for responsive design to work.
       (Responsive design = make the website look good on
       smaller screen sizes like a phone or a tablet). -->
@@ -21,11 +21,9 @@
   <body>
     <div class="amazon-header">
       <div class="amazon-header-left-section">
-        <a href="amazon.html" class="header-link">
-          <img class="amazon-logo"
-            src="images/amazon-logo-white.png">
-          <img class="amazon-mobile-logo"
-            src="images/amazon-mobile-logo-white.png">
+        <a href="amazon.html" class="header-link"> 
+          <img class="amazon-logo" src="images/amazon-logo-white.png">
+          <img class="amazon-mobile-logo" src="images/amazon-mobile-logo-white.png">
         </a>
       </div>
 
@@ -55,8 +53,7 @@
       <div class="products-grid">
         <div class="product-container">
           <div class="product-image-container">
-            <img class="product-image"
-              src="images/products/athletic-cotton-socks-6-pairs.jpg">
+            <img class="product-image" src="images/products/athletic-cotton-socks-6-pairs.jpg">
           </div>
 
           <div class="product-name limit-text-to-2-lines">
@@ -87,6 +84,7 @@
               <option value="8">8</option>
               <option value="9">9</option>
               <option value="10">10</option>
+            
             </select>
           </div>
 
@@ -201,5 +199,6 @@
         </div>
       </div>
     </div>
+    <script src="scripts/amazon.js"></script>
   </body>
 </html>
